@@ -1,5 +1,5 @@
 /*
- * $Id: set.c,v 1.16 2002/12/23 00:14:22 ronpinkas Exp $
+ * $Id: set.c,v 1.17 2003/01/06 21:32:00 lculik Exp $
  */
 
 /*
@@ -73,6 +73,7 @@ static PHB_SET_LISTENER sp_sl_first;
 static PHB_SET_LISTENER sp_sl_last;
 static int s_next_listener;
 
+static char hb_dirsep_string[2];
 static HB_PATHNAMES * sp_set_path;
 
 static void hb_setFreeSetPath( void )
@@ -897,6 +898,65 @@ HB_FUNC( SET )
          if( args > 1 ) hb_set.HB_SET_PRINTERJOB = set_string( pArg2, hb_set.HB_SET_PRINTERJOB);
          break;
   */
+      case HB_SET_FILECASE :
+         hb_retni( hb_set.HB_SET_FILECASE );
+         if( args > 1 )
+         {
+            if( HB_IS_STRING( pArg2 ) )
+            {
+               if( ! hb_stricmp( hb_itemGetCPtr( pArg2 ), "LOWER" ) )
+                  hb_set.HB_SET_FILECASE = HB_SET_CASE_LOWER;
+               else if( ! hb_stricmp( hb_itemGetCPtr( pArg2 ), "UPPER" ) )
+                  hb_set.HB_SET_FILECASE = HB_SET_CASE_UPPER;
+               else if( ! hb_stricmp( hb_itemGetCPtr( pArg2 ), "MIXED" ) )
+                  hb_set.HB_SET_FILECASE = HB_SET_CASE_MIXED;
+               else
+                  hb_errRT_BASE( EG_ARG, 2020, NULL, "SET", 2, hb_paramError( 1 ), hb_paramError( 2 ) );
+            }
+            else if( HB_IS_NUMERIC( pArg2 ) )
+            {
+               if( set_number( pArg2, hb_set.HB_SET_FILECASE ) < 0 )
+                  hb_errRT_BASE( EG_ARG, 2020, NULL, "SET", 2, hb_paramError( 1 ), hb_paramError( 2 ) );
+               else
+                  hb_set.HB_SET_FILECASE = set_number( pArg2, hb_set.HB_SET_FILECASE );
+            }
+            else
+               hb_errRT_BASE( EG_ARG, 2020, NULL, "SET", 2, hb_paramError( 1 ), hb_paramError( 2 ) );
+         }
+         break;
+      case HB_SET_DIRCASE :
+         hb_retni( hb_set.HB_SET_DIRCASE );
+         if( args > 1 )
+         {
+            if( HB_IS_STRING( pArg2 ) )
+            {
+               if( ! hb_stricmp( hb_itemGetCPtr( pArg2 ), "LOWER" ) )
+                  hb_set.HB_SET_DIRCASE = HB_SET_CASE_LOWER;
+               else if( ! hb_stricmp( hb_itemGetCPtr( pArg2 ), "UPPER" ) )
+                  hb_set.HB_SET_DIRCASE = HB_SET_CASE_UPPER;
+               else if( ! hb_stricmp( hb_itemGetCPtr( pArg2 ), "MIXED" ) )
+                  hb_set.HB_SET_DIRCASE = HB_SET_CASE_MIXED;
+               else
+                  hb_errRT_BASE( EG_ARG, 2020, NULL, "SET", 2, hb_paramError( 1 ), hb_paramError( 2 ) );
+            }
+            else if( HB_IS_NUMERIC( pArg2 ) )
+            {
+               if( set_number( pArg2, hb_set.HB_SET_DIRCASE ) < 0 )
+                  hb_errRT_BASE( EG_ARG, 2020, NULL, "SET", 2, hb_paramError( 1 ), hb_paramError( 2 ) );
+               else
+                  hb_set.HB_SET_DIRCASE = set_number( pArg2, hb_set.HB_SET_DIRCASE );
+            }
+            else
+               hb_errRT_BASE( EG_ARG, 2020, NULL, "SET", 2, hb_paramError( 1 ), hb_paramError( 2 ) );
+         }
+         break;
+      case HB_SET_DIRSEPARATOR :
+         hb_dirsep_string[0] = hb_set.HB_SET_DIRSEPARATOR;
+         hb_dirsep_string[1] = '\0';
+         hb_retc( hb_dirsep_string );
+	 if( args > 1 ) hb_set.HB_SET_DIRSEPARATOR = set_char( pArg2, hb_set.HB_SET_DIRSEPARATOR );
+         break;
+
       default                :
          /* Return NIL if called with invalid SET specifier */
          break;
@@ -980,6 +1040,10 @@ void hb_setInitialize( void )
    hb_set.HB_SET_TYPEAHEAD = 50; hb_inkeyReset( TRUE ); /* Allocate keyboard typeahead buffer */
    hb_set.HB_SET_UNIQUE = FALSE;
    hb_set.HB_SET_VIDEOMODE = 0;
+   hb_set.HB_SET_FILECASE = HB_SET_CASE_LOWER;
+   hb_set.HB_SET_DIRCASE = HB_SET_CASE_LOWER;
+   hb_set.HB_SET_DIRSEPARATOR = '\\';
+
    hb_set.HB_SET_WRAP = FALSE;
    hb_set.hb_set_winprinter=FALSE;
    hb_set.hb_set_printerjob = ( char * ) hb_xgrab( 8 );
